# poblaciones

./: .gitignore  README.md  pyproject.toml
data/: population.csv
src/poblacion/: __init__.py  __main__.py  population_test.py
